# SystemSoftwareLW2

LW2R/: Program.cs
spoLW2/: CMakeLists.txt  Makefile
spoLW2/headers/: commands.h  constants.h  filesystem_utils.h  mode.h  operations_ext.h  partition.h  structures.h  user_interface.h  utils.h
spoLW2/sources/: commands.c  filesystem_utils.c  main.c  mode.c  operations_ext.c  partition.c  user_interface.c  utils.c
